[gd_scene load_steps=9 format=2]

[ext_resource path="res://Screens/CreateQuestion.gd" type="Script" id=1]
[ext_resource path="res://res/Wood15.jpg" type="Texture" id=2]
[ext_resource path="res://Interface/Interactive/ScrollContainerDraggable.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interface/Input/TextEditFreeForm.tscn" type="PackedScene" id=4]
[ext_resource path="res://Interface/Input/DrawBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Interface/TextDisplay/LabelAdaptive.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/SubMenuFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Interface/Buttons/MenuButton.tscn" type="PackedScene" id=8]

[node name="CreateQuestionRoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 674.318, 825.901 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0457
margin_right = -30.0
margin_bottom = -23.9543
size_flags_horizontal = 0
size_flags_vertical = 3
custom_constants/separation = 15
alignment = 1

[node name="ScrollContainer" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 660.0
margin_bottom = 714.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 600.0
margin_bottom = 919.0
rect_min_size = Vector2( 600, 0 )
custom_constants/separation = 20
alignment = 1

[node name="TextEditQuestion" parent="VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 4 )]

[node name="AnswerTextEdit" parent="VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 170.0
margin_bottom = 320.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 340.0
margin_right = 600.0
margin_bottom = 854.0

[node name="VBoxContainerDraw" parent="VBoxContainer/ScrollContainer/VBoxContainer/CenterContainer" instance=ExtResource( 5 )]
margin_left = 84.0
margin_top = 0.0
margin_right = 516.0
margin_bottom = 514.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 874.0
margin_right = 600.0
margin_bottom = 919.0

[node name="LabelSkill" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 6 )]
margin_right = 200.0
margin_bottom = 45.0
rect_min_size = Vector2( 200, 0 )

[node name="OptionButtonSkill" type="OptionButton" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 245.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 7 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 729.0
margin_right = 660.0
margin_bottom = 805.455

[node name="ButtonCreateQuestion" parent="VBoxContainer/CenterContainer" instance=ExtResource( 8 )]
margin_left = 280.0
margin_right = 380.0
text_loc = "createQuestion"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 820.0
margin_right = 660.0
margin_bottom = 896.455

[node name="ButtonCancel" parent="VBoxContainer/CenterContainer2" instance=ExtResource( 8 )]
margin_left = 280.0
margin_right = 380.0
text_loc = "cancel"
[connection signal="pressed" from="VBoxContainer/CenterContainer/ButtonCreateQuestion" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
